<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_todo_app"
    android:padding="20dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:hint="@string/addTasks"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <RadioButton
            android:id="@+id/rbBussiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/negocio"
            android:textColor="@color/white"
            app:buttonTint="@color/business_category" />
        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/personal_category"
            android:text="@string/personal"
            android:textColor="@color/white" />
        <RadioButton
            android:id="@+id/rbOthers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/other_category"
            android:text="@string/otros"
            android:textColor="@color/white" />
    </RadioGroup>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCreaTarea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/creaTarea"
        android:textAllCaps="true"
        android:backgroundTint="@color/accent"
        android:layout_weight="1"
        />
</LinearLayout>